--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DuocUC Asistencia",
+  "name": "RegistrAPP",
   "version": "0.0.1",
   "author": "Moises Munoz",
   "homepage": "https://ionicframework.com/",
